<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_sign_up_background"
        android:orientation="vertical">

        <!--    firstname,lastname, email, password, confirm password,-->
        <!--    phone num, andress, button-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:titleTextColor="@color/white" />

        <!--    <TextView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/sign_up"-->
        <!--        android:fontFamily="sans-serif-condensed-medium"-->
        <!--        android:textStyle="italic"-->
        <!--        android:textAlignment="center"-->
        <!--        android:textColor="@color/white"-->
        <!--        android:paddingVertical="10dp"-->
        <!--        android:textSize="32sp" />-->

        <!--    <ImageView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:src="@drawable/img_join_us"-->
        <!--        android:scaleType="centerCrop"-->
        <!--        />-->


        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_first_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_last_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_username"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_gender"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:buttonTint="@color/white"
                android:text="@string/text_gender_male"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/white"
                android:text="@string/text_gender_female"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:buttonTint="@color/white"
                android:text="@string/text_gender_other"
                android:textColor="@color/white" />
        </RadioGroup>


        <EditText
            android:id="@+id/editContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_contact_number"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/text_confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/white"
            android:text="@string/text_terms_and_condition"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_button"
            android:paddingHorizontal="30dp"
            android:text="@string/create_account"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>
