<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_sign_up_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/text_username"
        android:textAlignment="center"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:layout_margin="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/text_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/forget_password"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkRemember"
        android:layout_gravity="center_horizontal"
        android:buttonTint="@color/white"
        android:text="@string/text_remember_me"
        android:textColor="@color/white" />

<!--    <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/checkDoNotRemember"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:buttonTint="@color/white"-->
<!--        android:text="@string/text_do_not_remember_me"-->
<!--        android:textColor="@color/white" />-->


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/edit_button"
        android:paddingHorizontal="30dp"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/or_sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/signUp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_margin="10dp"-->
<!--            android:background="@drawable/edit_button"-->
<!--            android:paddingHorizontal="30dp"-->
<!--            android:text="@string/sign_up"-->
<!--            android:textStyle=""-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="20sp" />-->
        </LinearLayout>
    </ScrollView>



</LinearLayout>